<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/menu_background"
                tools:context="com.suzuyo.snake.FullscreenActivity" android:gravity="center_horizontal">
    <Button
            android:text="@string/menu_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/play_button"
            android:layout_marginTop="140dp" android:layout_alignParentTop="false"
            android:fontFamily="@font/kavoon" android:textSize="36sp"
            android:textColor="@android:color/white" android:background="#2CC02C"
            android:width="200dp"/>
    <Button
            android:text="@string/menu_scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/scores_button"
            android:gravity="center_horizontal" android:fontFamily="@font/kavoon" android:textSize="36sp"
            android:textColor="@android:color/white" android:background="#63C02D"
            android:layout_below="@id/play_button" android:width="200dp" android:layout_marginTop="10dp"/>

    <Button
            android:text="@string/menu_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/exit_button"
            android:gravity="center_horizontal" android:fontFamily="@font/kavoon" android:textSize="36sp"
            android:textColor="@android:color/white" android:background="#2CC02C"
            android:layout_below="@id/scores_button" android:width="200dp" android:layout_marginTop="10dp"/>
</RelativeLayout>