<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.suzuyo.snake.ScoresActivity" android:background="#51B529">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:background="#73C646" android:paddingBottom="10dp" android:id="@+id/constraintLayout3">

        <Button
                android:text="@string/menu"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:id="@+id/menuButton2" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:background="#51B529" android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/kavoon" android:textColor="@android:color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp" android:layout_marginTop="5dp" android:background="#73C646"
            android:stretchColumns="1,2,3" android:padding="5dp">
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/scores_lp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_column="1"
                    android:textColor="@android:color/white" android:textSize="18sp"/>
            <TextView
                    android:text="@string/scores_snake_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_column="2"
                    android:textColor="@android:color/white" android:textSize="18sp"/>
            <TextView
                    android:text="@string/scores_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_column="3"
                    android:textColor="@android:color/white" android:textSize="18sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/scores_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_column="1"
                    android:textColor="@android:color/white" android:textSize="18sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/firstSnakeLength" android:layout_column="2"
                    android:textColor="@android:color/white"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/firstTime" android:layout_column="3"
                    android:textColor="@android:color/white"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/scores_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView11" android:layout_column="1"
                    android:textColor="@android:color/white" android:textSize="18sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/secondSnakeLength" android:layout_column="1"
                    android:textColor="@android:color/white"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/secondTime" android:layout_column="1"
                    android:textColor="@android:color/white"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/scores_third"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView12" android:layout_column="1"
                    android:textColor="@android:color/white" android:textSize="18sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/thirdSnakeLength" android:layout_column="1"
                    android:textColor="@android:color/white"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/thirdTime" android:layout_column="1"
                    android:textColor="@android:color/white"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>