<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.suzuyo.snake.FinishGameActivity" android:background="#51B529">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:background="#73C646"
            android:paddingBottom="10dp" android:id="@+id/constraintLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titles"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"
                android:layout_marginStart="10dp">
            <TextView
                    android:text="@string/finish_game_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/timeTitleView"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@android:color/white"/>
            <TextView
                    android:text="@string/finish_game_snake_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/snakeLengthTitleView"
                    app:layout_constraintTop_toBottomOf="@+id/timeTitleView"
                    app:layout_constraintStart_toStartOf="parent" android:textColor="@android:color/white"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/titles"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"
                android:layout_marginStart="20dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/timeValueView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/snakeLengthValueView"
                    app:layout_constraintTop_toBottomOf="@id/timeValueView"
                    app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
                android:text="@string/menu"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:id="@+id/menuButton" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:background="#51B529" android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/kavoon" android:textColor="@android:color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
            android:text="@string/game_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@android:color/white"
            android:fontFamily="@font/kavoon" android:textSize="36sp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" android:layout_marginTop="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>